<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"> My Stream</string>
    <string name="search_title">Search</string>
    <string name="title_activity_recites_name">Recites Names</string>
    <string name="title_activity_aya_list">Surahs list</string>
    <string name="back"> back</string>
    <string name="menu">menu</string>
    <string name="downlaod">download</string>
    <string name="title_activity_managerdb">Listen</string>
    <string name="ad_APP_ID">ca-app-pub-9350633918697995~2524775865</string>
        <string name="banner_ad_unit_id">ca-app-pub-9350633918697995/2452362817</string>
        <string name="NATIVE_ADMOB_AD_UNIT_ID">ca-app-pub-9350633918697995/4826588176</string>
        <string name="REWARD_VIDEO_ADMOB_AD_UNIT_ID">ca-app-pub-9350633918697995/7533398267</string>
    <string name="APPOPEN_ADMOB_AD_UNIT_ID">ca-app-pub-9350633918697995/1727695238</string>
    <string name="Pop_ad_unit_id">no</string>
    <string name="Video_ad_unit_id">no</string>
    <string name="rateapp">Rate My Stream</string>
    <string name="separeteapp"> Share My Stream</string>
    <string name="Languages">Language</string>
    <string name="sharemessage"> My Stream : I want to share with you My stream app , you can listen to holy quran from more than 150 reciters, listen to radio channels all day , react to youtube videos and more . you can download free now </string>
    <string name="sharePart1"> I was listen to </string>
    <string name="sharePart2"> from  </string>
    <string name="sharePart3"> reciter  </string>
    <string name="sharePart4"> you can listen it from **My Stream** App. Download from google play .  </string>
    <string name="shareURL"> https://rebrand.ly/notfof70d </string>
    <string name="ar">Arabic</string>
    <string name="en">English</string>
    <string name="rateq">would you like to rate the app</string>
    <string name="shareDesc">Would you like to share My Stream With all friends you know ?</string>
    <string name="shareNow">Share Now</string>
    <string name="rateBtn">Rate</string>
    <string name="later">Later</string>
    <string name="facebook">Face Book</string>
    <string name="website">geohashim.com</string>
    <string name="invitation_title">Send App Invite To Your Friends</string>
    <string name="invitation_message">Stream app : I want to share with you My stream app to share your moment and see how people react to it ( share your life now ) . you can download free now</string>
    <string name="invitation_deep_link">https://rebrand.ly/notfof70d</string>
    <string name="invitation_custom_image">https://drive.google.com/open?id=0B8SiY-GFCVIjRERpZzU5dmN5OTg</string>
    <string name="invitation_cta">Install!</string>
    <string name="invitation_subject">Try this great app!</string>
    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>
    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="custom_invite">Custom Invite</string>
    <string name="action_deep_link">
        com.delaroystudios.appinvites.DEEP_LINK_ACTION
    </string>
    <string name="invite">Send invitations!</string>
    <string name="welcome">Invite Your friends Now!</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="share">Share By</string>
    <string name="cancel">Cancel</string>
    <string name="Download_aya">My Stream download</string>
    <string name="aya_download_progress">Download in progress...</string>
    <string name="download_done">Download complete</string>
    <string name="download_canceled">Download canceled</string>
    <string name="download_started">Downloading all surahs…</string>
    <string name="download_failed">Download failed, please try again</string>
    <string name="download_failed_title">Download failed</string>
    <string name="no_items_to_download">No surahs available to download</string>
    <string name="source_streaming">Streaming</string>
    <string name="source_offline">Offline</string>
    <string name="surah_deleted">Surah deleted from device</string>
    <string name="surah_delete_failed">Failed to delete surah</string>
    <string name="downloads">Downloads</string>
    <string name="sound">----Sound System</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">FINISH</string>
    <string name="slide_1_title">My Stream</string>
    <string name="slide_1_desc">The Online And Offline Quran Streaming Player</string>
    <string name="slide_2_title">Share What People Want To Watch And Listen </string>
    <string name="slide_2_desc">You can share any moment you have and see how people react</string>
    <string name="slide_3_title">Modern Media player</string>
    <string name="slide_3_desc">By  pressing at the recite , you can play it immediately in background</string>
    <string name="slide_4_title">Now you are ready to use My Stream </string>
    <string name="slide_4_desc">App will make a reminder to remembered you to listen to Quran
Press the button below to set the time for this , then you can start the app </string>
    <string name="settime">Set time</string>
    <string name="set">Here you can set the time for the reminder notification  </string>
    <string name="prescolored">Press on colored text to set time…</string>
    <string name="selecttime">Select Time…</string>
    <string name="set_time">Reminder</string>
    <string name="reminder_started">Reminder started</string>
    <string name="new_ubdate">Ubdate to new version</string>
    <string name="newVersion">New version available for My Stream , Download it now \n press Ubdate Now button to download</string>
    <string name="ubdate">Ubdate Now</string>
    <string name="remind_switch">Reminder</string>
    <string name="lastrecite">Recite History</string>
    <string name="history">Would you like to go to last recite?</string>
    <string name="last_history">Go to bookmark</string>
    <string name="nohistory">No Bookmark found</string>
    <string name="select_bookmark">Select Bookmark</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="delete_bookmark_confirm">Delete this bookmark?</string>
    <string name="hint_dob">Enter Age</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_gender">I am</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_sign_up">Register !!</string>
    <string name="err_msg_name">Please enter a Name</string>
    <string name="err_msg_required">Valid Input Required</string>
    <string name="err_msg_email">Please enter a Valid Email</string>
    <string name="err_msg_password">Enter a Password</string>
    <string name="err_msg_dob">Enter a valid D.O.B</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_signup">Don\'t have an account yet Register !!</string>
    <string name="btn_link_login">Already have an account Login !!</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HolyQuran">Holy Quran</string>
    <string name="impossible_game">Athkar Counter</string>
    <string name="press">Tap the button to start counting with each dhikr</string>
    <string name="watch_video_button_text">Watch ad</string>
    <string name="default_coin_text">Coins: 0</string>
    <string name="Radio">Radio</string>
    <string name="OtherCategories">Other</string>
    <string name="ChooseTheme">Choose Your Theme</string>
    <string name="slide_4_desc_theme">you can choose your preferred color system</string>
    <string name="menu_home">Home</string>
    <string name="Users">Users</string>
    <string name="reporting">Reporting</string>
    <string name="CommentsReporting">Comments Reporting</string>
    <string name="LocalPostsReporting">Local Posts Reporting</string>
    <string name="YouTubePostsReporting">YouTube Posts Reporting</string>
    <string name="reports">Reports</string>
    <string name="UserReports">User Reports</string>
    <string name="prefs_app_location_title">Quran data directory</string>
    <string name="prefs_app_location_summary">Choose where to store Quran files</string>
    <string name="prefs_send_logs_title">Send logs</string>
    <string name="prefs_send_logs_summary">Send debug logs to the developer</string>
    <string name="prefs_category_advanced">Advanced Options</string>
    <string name="prefs_category_bookmarks_tags">Bookmarks &amp; Tags</string>
    <string name="prefs_category_storage">Storage</string>
    <string name="prefs_category_diagnostics">Diagnostics</string>
    <string name="prefs_import_title">Import</string>
    <string name="prefs_import_summary">Import bookmarks and categories</string>
    <string name="prefs_export_title">Export</string>
    <string name="prefs_export_summary">Export a copy of bookmarks and categories</string>
    <string name="prefs_export_csv_title">Export CSV</string>
    <string name="prefs_export_csv_summary">Export a copy of bookmarks and categories in CSV</string>
    <string name="TheHolyQuran">Open Mushaf</string>
    <string name="onb_continue">Continue</string>
    <string name="onb_enter_app">Enter app</string>
    <string name="onb_personalize_title">Personalize</string>
    <string name="onb_personalize_sub">Turn features on now — change anytime in Settings</string>
    <string name="onb_section_prayer">Prayer Times</string>
    <string name="onb_section_reminders">Daily Reminders</string>
    <string name="onb_section_appearance">Appearance</string>
    <string name="onb_athan_toggle_title">Athan &amp; Prayer Alarms</string>
    <string name="onb_athan_toggle_desc">Adhan at every prayer, offline</string>
    <string name="onb_athan_shortcut">Set your location &amp; athan voice</string>
    <string name="onb_theme_light">Light</string>
    <string name="onb_theme_dark">Dark</string>
    <string name="onb_theme_system">System</string>
    <string name="onb_ready_title">You\'re all set</string>
    <string name="onb_ready_desc">We\'ll ask for a couple of permissions so reminders and the athan can reach you on time.</string>
    <string name="onb_grant_exact_alarm">Allow exact alarms for accurate athan times</string>
</resources>