<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/nav_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@id/nav_quran"
        android:icon="@drawable/holyquran"
        android:title="@string/HolyQuran" />
    <item
        android:id="@id/nav_radio"
        android:icon="@drawable/outline_radio_24"
        android:title="@string/Radio" />
    <item
        android:id="@+id/nav_mushaf"
        android:icon="@drawable/ramadan_quran_24px"
        android:title="@string/TheHolyQuran" />
    <item
        android:id="@id/nav_more"
        android:icon="@drawable/outline_category_24"
        android:title="@string/OtherCategories" />
</menu>
