<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RewardVideo">

    <TextView
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/impossible_game"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_title"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/press"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer"
        android:layout_centerHorizontal="true"
        android:text="@string/press"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <com.google.android.gms.ads.AdView

        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/retry_button"
        android:layout_marginBottom="7dp"
        android:layout_centerInParent="true"
        android:layout_weight="1"
        app:adSize="BANNER"
        android:background="@color/transparent"
        app:adUnitId="@string/banner_ad_unit_id">

    </com.google.android.gms.ads.AdView>

    <Button
        android:id="@+id/retry_button"
        android:layout_width="600px"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_zekr"
         />

    <Button
        android:id="@+id/watch_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/retry_button"
        android:layout_centerHorizontal="true"
        android:text="@string/watch_video_button_text" />

    <TextView
        android:id="@+id/coin_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/default_coin_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>