<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/slide_title"
            android:gravity="center"
            android:text="@string/slide_4_title"
            android:textColor="@color/bg_slider_screen4"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/img_width_height"
            android:layout_height="100dp"
            android:src="@drawable/mystream" />

        <TextView
            android:id="@+id/themetextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="@dimen/desc_padding"
            android:paddingEnd="@dimen/desc_padding"
            android:text="@string/slide_4_desc_theme"
            android:textAlignment="center"
            android:visibility="gone"
            android:textColor="@color/bg_slider_screen_desc"
            android:textSize="@dimen/slide_desc" />

        <FrameLayout
            android:id="@+id/welcomefragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

        </FrameLayout>
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="darkMode"
            android:padding="5dp"
            android:visibility="gone"
            android:background="@drawable/gradient_bg_hover"
            android:text="@string/ChooseTheme" />
        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="@dimen/desc_padding"
            android:paddingEnd="@dimen/desc_padding"
            android:text="@string/slide_4_desc"
            android:textAlignment="center"
            android:textColor="@color/bg_slider_screen_desc"
            android:textSize="@dimen/slide_desc" />



        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buset"
            android:layout_marginTop="5dp"
            android:background="@drawable/gradient_bg_hover"
            android:textColor="@color/black"
            android:text="@string/settime" />

    </LinearLayout>
</RelativeLayout>